testdata/zkc/invalid/fixed_array_04.zkc
//error:3:16-17:expected comma to define array size
fn main() {
  var items:[u8;2]
}